tests/errors/interface_missing_field.dang
# Test that a type implementing an interface must have all required fields

interface Greetable {
  pub greet: String!
}

type Person implements Greetable {
  pub name: String!
  # Missing: pub greet: String!
}
